--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.beemancer.storage_crate": "Storage Crate",
   "block.beemancer.storage_controller": "Storage Controller",
   "block.beemancer.storage_terminal": "Storage Terminal",
+  "block.beemancer.controlled_hive": "Controlled Hive",
   "block.beemancer.bee_creator": "Bee Creator",
   "block.beemancer.magic_hive": "Magic Hive",
   "block.beemancer.antibreeding_crystal": "Antibreeding Crystal",
