--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -6,6 +6,7 @@
   "block.beemancer.storage_crate": "Caisse de Stockage",
   "block.beemancer.storage_controller": "Contrôleur de Stockage",
   "block.beemancer.storage_terminal": "Terminal de Stockage",
+  "block.beemancer.controlled_hive": "Ruche Contrôlée",
   "block.beemancer.bee_creator": "Créateur d'Abeilles",
   "block.beemancer.magic_hive": "Ruche Magique",
   "block.beemancer.antibreeding_crystal": "Cristal Anti-reproduction",
