add climat label

--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -207,6 +207,12 @@
   "tooltip.beemancer.flower.flower": "Flowers",
   "tooltip.beemancer.flower.mushroom": "Mushrooms",
   "tooltip.beemancer.flower.crystal": "Crystals",
+  "tooltip.beemancer.climate": "Climate",
+  "tooltip.beemancer.climate.frozen": "Frozen",
+  "tooltip.beemancer.climate.cold": "Cold",
+  "tooltip.beemancer.climate.temperate": "Temperate",
+  "tooltip.beemancer.climate.warm": "Warm",
+  "tooltip.beemancer.climate.hot": "Hot",
   "tooltip.beemancer.drop": "Drop",
   "tooltip.beemancer.flyspeed": "Fly Speed",
   "tooltip.beemancer.foraging": "Foraging",
