--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -207,6 +207,12 @@
   "tooltip.beemancer.flower.flower": "Fleurs",
   "tooltip.beemancer.flower.mushroom": "Champignons",
   "tooltip.beemancer.flower.crystal": "Cristaux",
+  "tooltip.beemancer.climate": "Climat",
+  "tooltip.beemancer.climate.frozen": "Glacial",
+  "tooltip.beemancer.climate.cold": "Froid",
+  "tooltip.beemancer.climate.temperate": "Tempéré",
+  "tooltip.beemancer.climate.warm": "Chaud",
+  "tooltip.beemancer.climate.hot": "Brûlant",
   "tooltip.beemancer.drop": "Drop",
   "tooltip.beemancer.flyspeed": "Vitesse",
   "tooltip.beemancer.foraging": "Butinage",
