--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -13,6 +13,7 @@
   "block.beemancer.antibreeding_crystal": "Antibreeding Crystal",
   "block.beemancer.incubator": "Incubator",
   "block.beemancer.manual_centrifuge": "Manual Centrifuge",
+  "block.beemancer.crank": "Crank",
   "block.beemancer.powered_centrifuge": "Powered Centrifuge",
   "block.beemancer.powered_centrifuge_tier2": "Powered Centrifuge Tier 2",
   "block.beemancer.powered_centrifuge_tier3": "Powered Centrifuge Tier 3",
