--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -13,6 +13,7 @@
   "block.beemancer.antibreeding_crystal": "Cristal Anti-reproduction",
   "block.beemancer.incubator": "Incubateur",
   "block.beemancer.manual_centrifuge": "Centrifugeuse Manuelle",
+  "block.beemancer.crank": "Manivelle",
   "block.beemancer.powered_centrifuge": "Centrifugeuse Automatique",
   "block.beemancer.powered_centrifuge_tier2": "Centrifugeuse Automatique Tier 2",
   "block.beemancer.powered_centrifuge_tier3": "Centrifugeuse Automatique Tier 3",
