--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -40,9 +40,6 @@
   "item.beemancer.honey_bucket": "Honey Bucket",
   "item.beemancer.royal_jelly_bucket": "Royal Jelly Bucket",
   "item.beemancer.nectar_bucket": "Nectar Bucket",
-  "item.beemancer.beeswax": "Beeswax",
-  "item.beemancer.propolis": "Propolis",
-  "item.beemancer.pollen": "Pollen",
   "item.beemancer.honeyed_wood": "Honeyed Wood",
   "item.beemancer.common_comb": "Common Comb",
   "item.beemancer.noble_comb": "Noble Comb",
@@ -257,8 +254,8 @@
   "codex.beemancer.alchemy.alchemy_basics.desc": "Learn the fundamentals of bee alchemy",
   "codex.beemancer.alchemy.honey_extraction.title": "Honey Extraction",
   "codex.beemancer.alchemy.honey_extraction.desc": "Extract magical honey from your bees",
-  "codex.beemancer.alchemy.propolis.title": "Propolis",
-  "codex.beemancer.alchemy.propolis.desc": "Harvest propolis for crafting",
+  "codex.beemancer.alchemy.bee_products.title": "Bee Products",
+  "codex.beemancer.alchemy.bee_products.desc": "Discover the products of bee alchemy",
   "codex.beemancer.alchemy.royal_jelly.title": "Royal Jelly",
   "codex.beemancer.alchemy.royal_jelly.desc": "Create the precious royal jelly",
   "codex.beemancer.alchemy.bee_essence.title": "Bee Essence",
