--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -40,9 +40,6 @@
   "item.beemancer.honey_bucket": "Seau de Miel",
   "item.beemancer.royal_jelly_bucket": "Seau de Gelée Royale",
   "item.beemancer.nectar_bucket": "Seau de Nectar",
-  "item.beemancer.beeswax": "Cire d'Abeille",
-  "item.beemancer.propolis": "Propolis",
-  "item.beemancer.pollen": "Pollen",
   "item.beemancer.honeyed_wood": "Bois Miellé",
   "item.beemancer.common_comb": "Rayon Commun",
   "item.beemancer.noble_comb": "Rayon Noble",
@@ -256,8 +253,8 @@
   "codex.beemancer.alchemy.alchemy_basics.desc": "Apprenez les fondamentaux de l'alchimie apicole",
   "codex.beemancer.alchemy.honey_extraction.title": "Extraction de Miel",
   "codex.beemancer.alchemy.honey_extraction.desc": "Extrayez le miel magique de vos abeilles",
-  "codex.beemancer.alchemy.propolis.title": "Propolis",
-  "codex.beemancer.alchemy.propolis.desc": "Récoltez la propolis pour le craft",
+  "codex.beemancer.alchemy.bee_products.title": "Produits Apicoles",
+  "codex.beemancer.alchemy.bee_products.desc": "Découvrez les produits de l'alchimie apicole",
   "codex.beemancer.alchemy.royal_jelly.title": "Gelée Royale",
   "codex.beemancer.alchemy.royal_jelly.desc": "Créez la précieuse gelée royale",
   "codex.beemancer.alchemy.bee_essence.title": "Essence d'Abeille",
