--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -440,6 +440,12 @@
   "gui.beemancer.tasks.empty": "Aucune tâche",
   "gui.beemancer.terminal.essences": "Essences",
 
+  "block.beemancer.import_interface": "Interface d'Import",
+  "block.beemancer.export_interface": "Interface d'Export",
+  "message.beemancer.network_interface.not_linked": "Non lié à un contrôleur",
+  "message.beemancer.network_interface.linked": "Lié au contrôleur en (%d, %d, %d)",
+  "message.beemancer.network_interface.linked_manually": "Interface liée au contrôleur !",
+
   "block.beemancer.honeyed_stone": "Pierre Miellée",
   "block.beemancer.honeyed_stone_stair": "Escalier en Pierre Miellée",
   "block.beemancer.honey_pedestal": "Piédestal de Miel",
