--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -446,6 +446,8 @@
   "message.beemancer.network_interface.not_linked": "Not linked to any controller",
   "message.beemancer.network_interface.linked": "Linked to controller at (%d, %d, %d)",
   "message.beemancer.network_interface.linked_manually": "Interface linked to controller!",
+  "container.beemancer.import_interface": "Import Interface",
+  "container.beemancer.export_interface": "Export Interface",
 
   "block.beemancer.honeyed_stone": "Honeyed Stone",
   "block.beemancer.honeyed_stone_stair": "Honeyed Stone Stairs",
